# rspc

./: .gitignore  README.md
autoload/rspc/: ccyank.vim  interact.vim  utils.vim  yank.vim
ccalgo/: .gitignore  .projections.json  arena.mk  configure.ac  main_template.cc  makefile.am  rspc-cc-algo-version.cc
ccalgo/2d/: discrete2dcoord.cc  discrete2dcoord.hh  input2dcoord.cc  input2dcoord.hh  point2d.cc  point2d.hh
ccalgo/common/: assert.hh  constexpr14.hh  vary_tuple.cc  vary_tuple.hh  zip_slist.cc  zip_slist.hh
ccalgo/network/: bfs.cc  bfs.hh  dense_net.cc  dense_net.hh  floyd.cc  floyd.hh  network01trait.hh  network_v_trait.hh  postorder_travel.cc  postorder_travel.hh  sparse_net.cc  sparse_net.hh  tree_root_hash.cc  tree_root_hash.hh  vec_arr_net.cc  vec_arr_net.hh
ccalgo/numeric/: amodint.hh  calc_in_mod.cc  calc_in_mod.hh  ext_gcd.cc  ext_gcd.hh  fast_prime_tester.hh  floor_sum.cc  floor_sum.hh  miller_rabin.cc  miller_rabin.hh  modint.cc  modint.hh  number_interface.hh  qpow64.cc  qpow64.hh  range_fill.cc  range_fill.hh
ccalgo/segment/: tree_shape_array.cc  tree_shape_array.hh
js/: astronauts.js
lua/: rspc.lua
pcalgo/: Cargo.toml
pcalgo/src/: lib.rs  np.rs  rw.rs
pl/: arena_mk.pl  ccfmt.pl  cps.pl  submit.pl
plugin/: RSPC_plugin.vim
